deploy: 7a382a887dc86dbab31e473865653499d3abe359

--- a/GeomPoint_8hpp.html
+++ b/GeomPoint_8hpp.html
@@ -84,7 +84,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1is__geometry.html" class="m-doc">meos::is_geometry</a>
             </dt>
-            <dd></dd>
+            <dd>Helps find out if a base type is geometry or not.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1is__geometry_3_01GeomPoint_01_4.html" class="m-doc">meos::is_geometry&lt;GeomPoint&gt;</a>
