--- a/Interpolation_8hpp.html
+++ b/Interpolation_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1default__interp.html" class="m-doc">meos::default_interp</a>
             </dt>
-            <dd></dd>
+            <dd>Helps decide the appropriate Interpolation for specified base type.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1default__interp_3_01bool_01_4.html" class="m-doc">meos::default_interp&lt;bool&gt;</a>
@@ -100,7 +100,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1is__discrete.html" class="m-doc">meos::is_discrete</a>
             </dt>
-            <dd></dd>
+            <dd>Helps find out if a base type is discrete or not.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1is__discrete_3_01bool_01_4.html" class="m-doc">meos::is_discrete&lt;bool&gt;</a>
