--- a/Temporal_8hpp.html
+++ b/Temporal_8hpp.html
@@ -80,7 +80,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">meos::Temporal</a>
             </dt>
-            <dd></dd>
+            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
           </dl>
         </section>
       </div>
