--- a/annotated.html
+++ b/annotated.html
@@ -55,18 +55,18 @@ Docs</span></a>
           <li class="m-doc-collapsible">
             <a href="#" onclick="return toggle(this)">namespace</a> <a href="namespacemeos.html" class="m-doc">meos</a> <span class="m-doc"><span></span></span>
             <ul class="m-doc">
-              <li>struct <a href="structmeos_1_1default__interp.html" class="m-doc">default_interp</a> <span class="m-doc"></span></li>
+              <li>struct <a href="structmeos_1_1default__interp.html" class="m-doc">default_interp</a> <span class="m-doc">Helps decide the appropriate Interpolation for specified base type.</span></li>
               <li>struct <a href="structmeos_1_1default__interp_3_01bool_01_4.html" class="m-doc">default_interp&lt;bool&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>struct <a href="structmeos_1_1default__interp_3_01int_01_4.html" class="m-doc">default_interp&lt;int&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>struct <a href="structmeos_1_1default__interp_3_01std_1_1string_01_4.html" class="m-doc">default_interp&lt;std::string&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1DeserializationException.html" class="m-doc">DeserializationException</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1Deserializer.html" class="m-doc">Deserializer</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1GeomPoint.html" class="m-doc">GeomPoint</a> <span class="m-doc"></span></li>
-              <li>struct <a href="structmeos_1_1is__discrete.html" class="m-doc">is_discrete</a> <span class="m-doc"></span></li>
+              <li>struct <a href="structmeos_1_1is__discrete.html" class="m-doc">is_discrete</a> <span class="m-doc">Helps find out if a base type is discrete or not.</span></li>
               <li>struct <a href="structmeos_1_1is__discrete_3_01bool_01_4.html" class="m-doc">is_discrete&lt;bool&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>struct <a href="structmeos_1_1is__discrete_3_01int_01_4.html" class="m-doc">is_discrete&lt;int&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>struct <a href="structmeos_1_1is__discrete_3_01std_1_1string_01_4.html" class="m-doc">is_discrete&lt;std::string&gt;</a> <span class="m-doc"><span></span></span></li>
-              <li>struct <a href="structmeos_1_1is__geometry.html" class="m-doc">is_geometry</a> <span class="m-doc"></span></li>
+              <li>struct <a href="structmeos_1_1is__geometry.html" class="m-doc">is_geometry</a> <span class="m-doc">Helps find out if a base type is geometry or not.</span></li>
               <li>struct <a href="structmeos_1_1is__geometry_3_01GeomPoint_01_4.html" class="m-doc">is_geometry&lt;GeomPoint&gt;</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1Period.html" class="m-doc">Period</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1PeriodSet.html" class="m-doc">PeriodSet</a> <span class="m-doc"><span></span></span></li>
@@ -76,11 +76,11 @@ Docs</span></a>
               <li>struct <a href="structmeos_1_1SRIDMembers.html" class="m-doc">SRIDMembers</a> <span class="m-doc"></span></li>
               <li>class <a href="classmeos_1_1STBox.html" class="m-doc">STBox</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1TBox.html" class="m-doc">TBox</a> <span class="m-doc"><span></span></span></li>
-              <li>class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> <span class="m-doc"></span></li>
+              <li>class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> <span class="m-doc"><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</span></li>
               <li>struct <a href="structmeos_1_1TemporalComparators.html" class="m-doc">TemporalComparators</a> <span class="m-doc"></span></li>
-              <li>class <a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> <span class="m-doc"><span></span></span></li>
+              <li>class <a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> <span class="m-doc"><a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> is the base class for <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> and <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>.</span></li>
               <li>class <a href="classmeos_1_1TimestampSet.html" class="m-doc">TimestampSet</a> <span class="m-doc"><span></span></span></li>
-              <li>class <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a> <span class="m-doc"></span></li>
+              <li>class <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a> <span class="m-doc">Class for representing temporals of instant duration.</span></li>
               <li>struct <a href="structmeos_1_1TInstantFunctions.html" class="m-doc">TInstantFunctions</a> <span class="m-doc"></span></li>
               <li>class <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> <span class="m-doc"><span></span></span></li>
               <li>class <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a> <span class="m-doc"><span></span></span></li>
