--- a/namespacemeos.html
+++ b/namespacemeos.html
@@ -76,7 +76,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1default__interp.html" class="m-doc">default_interp</a>
             </dt>
-            <dd></dd>
+            <dd>Helps decide the appropriate Interpolation for specified base type.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1default__interp_3_01bool_01_4.html" class="m-doc">default_interp&lt;bool&gt;</a>
@@ -109,7 +109,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1is__discrete.html" class="m-doc">is_discrete</a>
             </dt>
-            <dd></dd>
+            <dd>Helps find out if a base type is discrete or not.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1is__discrete_3_01bool_01_4.html" class="m-doc">is_discrete&lt;bool&gt;</a>
@@ -129,7 +129,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               struct <a href="structmeos_1_1is__geometry.html" class="m-doc">is_geometry</a>
             </dt>
-            <dd></dd>
+            <dd>Helps find out if a base type is geometry or not.</dd>
             <dt>
               <div class="m-doc-template">template&lt;&gt;</div>
               struct <a href="structmeos_1_1is__geometry_3_01GeomPoint_01_4.html" class="m-doc">is_geometry&lt;GeomPoint&gt;</a>
@@ -173,7 +173,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a>
             </dt>
-            <dd></dd>
+            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename TemporalType&gt;</div>
               struct <a href="structmeos_1_1TemporalComparators.html" class="m-doc">TemporalComparators</a>
@@ -183,7 +183,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a>
             </dt>
-            <dd><span></span></dd>
+            <dd><a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> is the base class for <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> and <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>.</dd>
             <dt>
               class <a href="classmeos_1_1TimestampSet.html" class="m-doc">TimestampSet</a>
             </dt>
@@ -192,7 +192,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               class <a href="classmeos_1_1TInstant.html" class="m-doc">TInstant</a>
             </dt>
-            <dd></dd>
+            <dd>Class for representing temporals of instant duration.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;</div>
               struct <a href="structmeos_1_1TInstantFunctions.html" class="m-doc">TInstantFunctions</a>
@@ -425,7 +425,7 @@ Docs</span></a>
               <span class="m-doc-wrap-bumper">auto <a href="#a5bf3719973d1c531a68b8d94b9360d44" class="m-doc">operator&lt;&lt;</a>(</span><span class="m-doc-wrap">std::ostream&amp; os,
               const <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a>&amp; i) -&gt; std::ostream&amp;</span>
             </dt>
-            <dd></dd>
+            <dd>Outputs a string representation of the Interpolation to the stream.</dd>
             <dt>
               <span class="m-doc-wrap-bumper">auto <a href="#a8eacacbdcb6f111fe0052640837cab47" class="m-doc">write_ISO8601_time</a>(</span><span class="m-doc-wrap"><a href="namespacemeos.html#acafb45f4fa7ee1cc0d455cec341f8797" class="m-doc">time_<wbr />point</a> const&amp; t) -&gt; std::string</span>
             </dt>
@@ -458,7 +458,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               bool <a href="#a616a7eaad87f058eda6d42be15b77549" class="m-doc">is_geometry_v</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
-            <dd></dd>
+            <dd>Shorthand for <a href="structmeos_1_1is__geometry.html#a3441a7abc37cf9c2b9ea6fda1c720439" class="m-doc">is_geometry&lt;BaseType&gt;::<wbr />value</a>.</dd>
             <dt>
               int const <a href="#ae3b2a481e2f2aa06767e42f6eda057ba" class="m-doc">SRID_DEFAULT</a>
             </dt>
@@ -467,12 +467,12 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a> <a href="#a3aa497ac5bbc5be4915ee211b7321374" class="m-doc">default_interp_v</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
-            <dd></dd>
+            <dd>Shorthand for <a href="structmeos_1_1default__interp.html#a1964fe53ead32655228202d043ec66a8" class="m-doc">default_interp&lt;BaseType&gt;::<wbr />value</a>.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
               bool <a href="#acdc82ce78314255b4ea4a5aad455ea76" class="m-doc">is_discrete_v</a> <span class="m-label m-flat m-primary">constexpr</span>
             </dt>
-            <dd></dd>
+            <dd>Shorthand for <a href="structmeos_1_1is__discrete.html#a723326f3e509389b4403baf217389d4e" class="m-doc">is_discrete&lt;BaseType&gt;::<wbr />value</a>.</dd>
             <dt>
               std::string <a href="#a004fdfe2427ef14f8c0390d967f4aa90" class="m-doc">ws</a>
             </dt>
@@ -818,7 +818,7 @@ Docs</span></a>
               const <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a>&amp; i)</span></span>
               <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="Interpolation_8hpp.html">&lt;meos/types/temporal/Interpolation.hpp&gt;</a></div>
             </h3>
-<p>Outputs a string representation of the Interpolation to the stream</p>
+            <p>Outputs a string representation of the Interpolation to the stream.</p>
           </div></section>
           <section class="m-doc-details" id="a8eacacbdcb6f111fe0052640837cab47"><div>
             <h3>
@@ -869,7 +869,7 @@ Docs</span></a>
               </div>
               bool meos::<wbr /><a href="#a616a7eaad87f058eda6d42be15b77549" class="m-doc-self">is_geometry_v</a> <span class="m-label m-primary">constexpr</span>
             </h3>
-<p>Shorthand for <a href="structmeos_1_1is__geometry.html#a3441a7abc37cf9c2b9ea6fda1c720439" class="m-doc">is_geometry&lt;BaseType&gt;::<wbr />value</a></p>
+            <p>Shorthand for <a href="structmeos_1_1is__geometry.html#a3441a7abc37cf9c2b9ea6fda1c720439" class="m-doc">is_geometry&lt;BaseType&gt;::<wbr />value</a>.</p>
           </div></section>
           <section class="m-doc-details" id="ae3b2a481e2f2aa06767e42f6eda057ba"><div>
             <h3>
@@ -886,7 +886,7 @@ Docs</span></a>
               </div>
               <a href="namespacemeos.html#a1ce9fcf3a52a3d907df274e5680720f5" class="m-doc">Interpolation</a> meos::<wbr /><a href="#a3aa497ac5bbc5be4915ee211b7321374" class="m-doc-self">default_interp_v</a> <span class="m-label m-primary">constexpr</span>
             </h3>
-<p>Shorthand for <a href="structmeos_1_1default__interp.html#a1964fe53ead32655228202d043ec66a8" class="m-doc">default_interp&lt;BaseType&gt;::<wbr />value</a></p>
+            <p>Shorthand for <a href="structmeos_1_1default__interp.html#a1964fe53ead32655228202d043ec66a8" class="m-doc">default_interp&lt;BaseType&gt;::<wbr />value</a>.</p>
           </div></section>
           <section class="m-doc-details" id="acdc82ce78314255b4ea4a5aad455ea76"><div>
             <h3>
@@ -896,7 +896,7 @@ Docs</span></a>
               </div>
               bool meos::<wbr /><a href="#acdc82ce78314255b4ea4a5aad455ea76" class="m-doc-self">is_discrete_v</a> <span class="m-label m-primary">constexpr</span>
             </h3>
-<p>Shorthand for <a href="structmeos_1_1is__discrete.html#a723326f3e509389b4403baf217389d4e" class="m-doc">is_discrete&lt;BaseType&gt;::<wbr />value</a></p>
+            <p>Shorthand for <a href="structmeos_1_1is__discrete.html#a723326f3e509389b4403baf217389d4e" class="m-doc">is_discrete&lt;BaseType&gt;::<wbr />value</a>.</p>
           </div></section>
           <section class="m-doc-details" id="a004fdfe2427ef14f8c0390d967f4aa90"><div>
             <h3>
