--- a/structmeos_1_1is__geometry.html
+++ b/structmeos_1_1is__geometry.html
@@ -55,6 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>is_geometry <span class="m-thin">struct</span>
         </h1>
+        <p>Helps find out if a base type is geometry or not.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -66,7 +67,7 @@ Docs</span></a>
             </li>
           </ul>
         </div>
-<p>Helps find out if a base type is geometry or not</p><p>Also check is_geometry_v&lt;BaseType&gt;, which should be more easy to use</p>
+<p>Also check is_geometry_v&lt;BaseType&gt;, which should be more easy to use</p>
         <section id="pub-static-attribs">
           <h2><a href="#pub-static-attribs">Public static variables</a></h2>
           <dl class="m-doc">
