--- a/classmeos_1_1TemporalSet.html
+++ b/classmeos_1_1TemporalSet.html
@@ -55,7 +55,7 @@ Docs</span></a>
           <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
           <span class="m-breadcrumb"><a href="namespacemeos.html">meos</a>::<wbr/></span>TemporalSet <span class="m-thin">class</span>
         </h1>
-        <p><span></span></p>
+        <p><a href="classmeos_1_1TemporalSet.html" class="m-doc">TemporalSet</a> is the base class for <a href="classmeos_1_1TInstantSet.html" class="m-doc">TInstantSet</a> and <a href="classmeos_1_1TSequence.html" class="m-doc">TSequence</a>.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -77,7 +77,7 @@ Docs</span></a>
               <div class="m-doc-template">template&lt;typename BaseType = float&gt;</div>
               class <a href="classmeos_1_1Temporal.html" class="m-doc">Temporal&lt;float&gt;</a>
             </dt>
-            <dd></dd>
+            <dd><a href="classmeos_1_1Temporal.html" class="m-doc">Temporal</a> is the base class for all the temporal types.</dd>
             <dt>
               <div class="m-doc-template">template&lt;typename TemporalType&gt;</div>
               struct <a href="structmeos_1_1TemporalComparators.html" class="m-doc">TemporalComparators&lt;TemporalSet&lt;float&gt;&gt;</a>
