--- a/structmeos_1_1TInstantFunctions.html
+++ b/structmeos_1_1TInstantFunctions.html
@@ -70,101 +70,35 @@ Docs</span></a>
         <section id="pub-methods">
           <h2><a href="#pub-methods">Public functions</a></h2>
           <dl class="m-doc">
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a3f7e5dda693c34b477d3436274ece44a" class="m-doc">numInstants</a>(</span><span class="m-doc-wrap">) const -&gt; size_t</span>
+            <dt id="a3f7e5dda693c34b477d3436274ece44a">
+              <span class="m-doc-wrap-bumper">auto <a href="#a3f7e5dda693c34b477d3436274ece44a" class="m-doc-self">numInstants</a>(</span><span class="m-doc-wrap">) const -&gt; size_t</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a9b255cf94dcca56d87421807e430d76d" class="m-doc">startInstant</a>(</span><span class="m-doc-wrap">) const -&gt; TInstantType</span>
+            <dd>Number of distinct instants.</dd>
+            <dt id="a9b255cf94dcca56d87421807e430d76d">
+              <span class="m-doc-wrap-bumper">auto <a href="#a9b255cf94dcca56d87421807e430d76d" class="m-doc-self">startInstant</a>(</span><span class="m-doc-wrap">) const -&gt; TInstantType</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a1abd69c19fc1631d270669dd73fb3fd8" class="m-doc">endInstant</a>(</span><span class="m-doc-wrap">) const -&gt; TInstantType</span>
+            <dd>Start instant, irrespective of whether the bounds are inclusive or not.</dd>
+            <dt id="a1abd69c19fc1631d270669dd73fb3fd8">
+              <span class="m-doc-wrap-bumper">auto <a href="#a1abd69c19fc1631d270669dd73fb3fd8" class="m-doc-self">endInstant</a>(</span><span class="m-doc-wrap">) const -&gt; TInstantType</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#ac39fcb86680077761bf6682a2e73f25e" class="m-doc">instantN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; TInstantType</span>
+            <dd>End instant, irrespective of whether the bounds are inclusive or not.</dd>
+            <dt id="ac39fcb86680077761bf6682a2e73f25e">
+              <span class="m-doc-wrap-bumper">auto <a href="#ac39fcb86680077761bf6682a2e73f25e" class="m-doc-self">instantN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; TInstantType</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a0db72432559363b7cc270563a04816a5" class="m-doc">startValue</a>(</span><span class="m-doc-wrap">) const -&gt; BaseType</span>
+            <dd>N-th distinct instant, irrespective of whether the bounds are inclusive or not.</dd>
+            <dt id="a0db72432559363b7cc270563a04816a5">
+              <span class="m-doc-wrap-bumper">auto <a href="#a0db72432559363b7cc270563a04816a5" class="m-doc-self">startValue</a>(</span><span class="m-doc-wrap">) const -&gt; BaseType</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a9ea4538dd065eb459c390cbdf187476b" class="m-doc">endValue</a>(</span><span class="m-doc-wrap">) const -&gt; BaseType</span>
+            <dd>Start value, irrespective of whether the bounds are inclusive or not.</dd>
+            <dt id="a9ea4538dd065eb459c390cbdf187476b">
+              <span class="m-doc-wrap-bumper">auto <a href="#a9ea4538dd065eb459c390cbdf187476b" class="m-doc-self">endValue</a>(</span><span class="m-doc-wrap">) const -&gt; BaseType</span>
             </dt>
-            <dd></dd>
-            <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#afe6d33c4dc8d8331fbfeac91ea480874" class="m-doc">valueN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; BaseType</span>
+            <dd>End value, irrespective of whether the bounds are inclusive or not.</dd>
+            <dt id="afe6d33c4dc8d8331fbfeac91ea480874">
+              <span class="m-doc-wrap-bumper">auto <a href="#afe6d33c4dc8d8331fbfeac91ea480874" class="m-doc-self">valueN</a>(</span><span class="m-doc-wrap">size_t n) const -&gt; BaseType</span>
             </dt>
-            <dd></dd>
+            <dd>N-th value, irrespective of whether the bounds are inclusive or not.</dd>
           </dl>
-        </section>
-        <section>
-          <h2>Function documentation</h2>
-          <section class="m-doc-details" id="a3f7e5dda693c34b477d3436274ece44a"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">size_t meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a3f7e5dda693c34b477d3436274ece44a" class="m-doc-self">numInstants</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Number of distinct instants.</p>
-          </div></section>
-          <section class="m-doc-details" id="a9b255cf94dcca56d87421807e430d76d"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">TInstantType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a9b255cf94dcca56d87421807e430d76d" class="m-doc-self">startInstant</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Start instant.</p>
-          </div></section>
-          <section class="m-doc-details" id="a1abd69c19fc1631d270669dd73fb3fd8"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">TInstantType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a1abd69c19fc1631d270669dd73fb3fd8" class="m-doc-self">endInstant</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>End instant.</p>
-          </div></section>
-          <section class="m-doc-details" id="ac39fcb86680077761bf6682a2e73f25e"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">TInstantType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#ac39fcb86680077761bf6682a2e73f25e" class="m-doc-self">instantN</a>(</span><span class="m-doc-wrap">size_t n) const</span></span>
-            </h3>
-<p>N-th distinct instant.</p>
-          </div></section>
-          <section class="m-doc-details" id="a0db72432559363b7cc270563a04816a5"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">BaseType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a0db72432559363b7cc270563a04816a5" class="m-doc-self">startValue</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>Start value.</p><p>The function does not take into account whether the bounds are inclusive or not.</p>
-          </div></section>
-          <section class="m-doc-details" id="a9ea4538dd065eb459c390cbdf187476b"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">BaseType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a9ea4538dd065eb459c390cbdf187476b" class="m-doc-self">endValue</a>(</span><span class="m-doc-wrap">) const</span></span>
-            </h3>
-<p>End value.</p><p>The function does not take into account whether the bounds are inclusive or not.</p>
-          </div></section>
-          <section class="m-doc-details" id="afe6d33c4dc8d8331fbfeac91ea480874"><div>
-            <h3>
-              <div class="m-doc-template">
-                template&lt;typename TemporalType, typename TInstantType, typename BaseType&gt;
-              </div>
-              <span class="m-doc-wrap-bumper">BaseType meos::<wbr />TInstantFunctions&lt;TemporalType, TInstantType, BaseType&gt;::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#afe6d33c4dc8d8331fbfeac91ea480874" class="m-doc-self">valueN</a>(</span><span class="m-doc-wrap">size_t n) const</span></span>
-            </h3>
-<p>N-th value.</p><p>The function does not take into account whether the bounds are inclusive or not.</p>
-          </div></section>
         </section>
       </div>
     </div>
